[package]
name = "u-siem-paloalto"
version = "0.0.1"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","paloalto","firewall"]
categories = ["security"]
edition = "2018"

[lib]
name = "usiem_paloalto"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-siem = {version = "0.0"}
chrono = "0.4"