[package]
name = "u-siem-paloalto"
version = "0.0.6"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/usiem-paloalto"
keywords = ["SIEM", "security", "logs","paloalto","firewall"]
categories = ["security"]
edition = "2018"

[lib]
name = "usiem_paloalto"
path = "src/lib.rs"

[dependencies]
u-siem = {version = "0.0"}
lazy_static = "1.4.0"